codama-macros/tests/codama_attribute/attribute_directive/invalid_signer.fail.rs
use codama::codama;

#[codama(account(signer = invalid))]
pub struct Test;

fn main() {}
